force-app/main/default/objects/WorkOrder/fields/WO_N_de_devis__c.field-meta.xml
<CustomField>
    <fullName>WO_N_de_devis__c</fullName>
    <formula>WO_DeviReferent__r.QuoteNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N° de devis</label>
    <type>Text</type>
</CustomField>