force-app/main/default/objects/WorkOrder/fields/WO_NC_Duree_de_reparation__c.field-meta.xml
<CustomField>
    <fullName>WO_NC_Duree_de_reparation__c</fullName>
    <inlineHelpText>Indiquer la durée de la réparation en minutes</inlineHelpText>
    <label>NC - Durée de réparation</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>