force-app/main/default/objects/WorkOrder/fields/WO_NC_Recurrent__c.field-meta.xml
<CustomField>
    <fullName>WO_NC_Recurrent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indiquer s&apos;il s&apos;agit d&apos;une non conformité récurrente</inlineHelpText>
    <label>NC - Récurrent</label>
    <type>Checkbox</type>
</CustomField>