force-app/main/default/objects/WorkOrder/fields/WO_NC_Reparation_in_situ__c.field-meta.xml
<CustomField>
    <fullName>WO_NC_Reparation_in_situ__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indiquer si la conformité a été réparée sur place</inlineHelpText>
    <label>NC - Réparation in situ</label>
    <type>Checkbox</type>
</CustomField>