force-app/main/default/objects/WorkOrder/fields/WO_NettoyageCoteEau__c.field-meta.xml
<CustomField>
    <fullName>WO_NettoyageCoteEau__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Nettoyage côté eau</description>
    <inlineHelpText>Nettoyage côté eau</inlineHelpText>
    <label>Nettoyage côté eau</label>
    <type>Checkbox</type>
</CustomField>