force-app/main/default/objects/WorkOrder/fields/WO_NettoyageDeLaPartieInterne__c.field-meta.xml
<CustomField>
    <fullName>WO_NettoyageDeLaPartieInterne__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Nettoyage de la partie interne</description>
    <inlineHelpText>Nettoyage de la partie interne</inlineHelpText>
    <label>Nettoyage de la partie interne</label>
    <type>Checkbox</type>
</CustomField>