force-app/main/default/objects/WorkOrder/fields/WO_NettoyageDesOrganesBruleur__c.field-meta.xml
<CustomField>
    <fullName>WO_NettoyageDesOrganesBruleur__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Nettoyage des organes brûleur</description>
    <inlineHelpText>Nettoyage des organes brûleur</inlineHelpText>
    <label>Nettoyage des organes brûleur</label>
    <type>Checkbox</type>
</CustomField>