force-app/main/default/objects/WorkOrder/fields/WO_NettoyageDesTurbinesdAir__c.field-meta.xml
<CustomField>
    <fullName>WO_NettoyageDesTurbinesdAir__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Vérification et nettoyage des turbines d’air</description>
    <label>Vérification nettoyage turbines d&apos;air</label>
    <type>Checkbox</type>
</CustomField>