force-app/main/default/objects/WorkOrder/fields/WO_NettoyageFiltreEtTurbine__c.field-meta.xml
<CustomField>
    <fullName>WO_NettoyageFiltreEtTurbine__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Vérification et nettoyage filtre et turbine</description>
    <inlineHelpText>Vérification et nettoyage filtre et turbine</inlineHelpText>
    <label>Vérification nettoyage filtre et turbine</label>
    <type>Checkbox</type>
</CustomField>