force-app/main/default/objects/WorkOrder/fields/WO_NettoyageFiltresGazPotsBruleurAir__c.field-meta.xml
<CustomField>
    <fullName>WO_NettoyageFiltresGazPotsBruleurAir__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Nettoyage des filtres gaz, des pots filtre et brûleur air comprimé</description>
    <inlineHelpText>Nettoyage des filtres gaz, des pots filtre et brûleur air comprimé</inlineHelpText>
    <label>Nettoyage filtres gaz, pots, brûleur air</label>
    <type>Checkbox</type>
</CustomField>