force-app/main/default/objects/WorkOrder/fields/WO_NomDeLOopportunite__c.field-meta.xml
<CustomField>
    <fullName>WO_NomDeLOopportunite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom de l&apos;opportunité</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Opportunity.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.WO_Produit__c</field>
            <operation>equals</operation>
            <valueField>Opportunity.OPP_Requete__r.ProductId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Interventions</relationshipLabel>
    <relationshipName>Interventions</relationshipName>
    <type>Lookup</type>
</CustomField>