force-app/main/default/objects/WorkOrder/fields/WO_NomDuTechnicien__c.field-meta.xml
<CustomField>
    <fullName>WO_NomDuTechnicien__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Nom de la ressource de service.</description>
    <inlineHelpText>Nom de la ressource de service.</inlineHelpText>
    <label>Nom du technicien</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Interventions</relationshipLabel>
    <relationshipName>Interventions</relationshipName>
    <type>Lookup</type>
</CustomField>