force-app/main/default/objects/WorkOrder/fields/WO_Notes_internes__c.field-meta.xml
<CustomField>
    <fullName>WO_Notes_internes__c</fullName>
    <label>Notes internes (non imprimées)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>