force-app/main/default/objects/WorkOrder/fields/WO_NouvelleInterventionRapideNecessaire__c.field-meta.xml
<CustomField>
    <fullName>WO_NouvelleInterventionRapideNecessaire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nvlle intervention nécessaire</label>
    <type>Checkbox</type>
</CustomField>