force-app/main/default/objects/WorkOrder/fields/WO_Numero_de_contrat__c.field-meta.xml
<CustomField>
    <fullName>WO_Numero_de_contrat__c</fullName>
    <formula>ServiceContract.SC_NumeroDuContrat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N° de CAT</label>
    <type>Text</type>
</CustomField>