force-app/main/default/objects/WorkOrder/fields/WO_NUniqueEquipement__c.field-meta.xml
<CustomField>
    <fullName>WO_NUniqueEquipement__c</fullName>
    <formula>Asset.ASS_NUniqueEquipement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N° Unique équipement</label>
    <type>Text</type>
</CustomField>