force-app/main/default/objects/WorkOrder/fields/WO_ObservationCirculationFluideThermique__c.field-meta.xml
<CustomField>
    <fullName>WO_ObservationCirculationFluideThermique__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Observation de la circulation fluide thermique en chaudière</description>
    <inlineHelpText>Observation de la circulation fluide thermique en chaudière</inlineHelpText>
    <label>Observation circulation fluide thermique</label>
    <type>Checkbox</type>
</CustomField>