force-app/main/default/objects/WorkOrder/fields/WO_OuvertureChaudiereEnPartieSuperieure__c.field-meta.xml
<CustomField>
    <fullName>WO_OuvertureChaudiereEnPartieSuperieure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ouverture chaudière en partie supérieure</description>
    <inlineHelpText>Ouverture chaudière en partie supérieure</inlineHelpText>
    <label>Ouverture chaudière en partie supérieure</label>
    <type>Checkbox</type>
</CustomField>