force-app/main/default/objects/WorkOrder/fields/WO_OuvertureCoteEau__c.field-meta.xml
<CustomField>
    <fullName>WO_OuvertureCoteEau__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ouverture côté eau</label>
    <type>Checkbox</type>
</CustomField>