force-app/main/default/objects/WorkOrder/fields/WO_OuvertureCoteFeu__c.field-meta.xml
<CustomField>
    <fullName>WO_OuvertureCoteFeu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ouverture côté feu</label>
    <type>Checkbox</type>
</CustomField>