force-app/main/default/objects/WorkOrder/fields/WO_PourcentageDeRetourCondensat__c.field-meta.xml
<CustomField>
    <fullName>WO_PourcentageDeRetourCondensat__c</fullName>
    <label>% de retour condensat</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>