force-app/main/default/objects/WorkOrder/fields/WO_PressionAirBruleurMmCE100__c.field-meta.xml
<CustomField>
    <fullName>WO_PressionAirBruleurMmCE100__c</fullName>
    <description>Pression Air Brûleur (mm CE) (100%)</description>
    <inlineHelpText>Pression Air Brûleur (mm CE) (100%)</inlineHelpText>
    <label>3-Press Air Brûleur(mm CE)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>