force-app/main/default/objects/WorkOrder/fields/WO_PressionAirBruleurMmCE50__c.field-meta.xml
<CustomField>
    <fullName>WO_PressionAirBruleurMmCE50__c</fullName>
    <description>Pression Air Brûleur (mm CE) (50%)</description>
    <inlineHelpText>Pression Air Brûleur (mm CE) (50%)</inlineHelpText>
    <label>2-Press Air Brûleur(mm CE)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>