force-app/main/default/objects/WorkOrder/fields/WO_PressionAirBruleurMmCE__c.field-meta.xml
<CustomField>
    <fullName>WO_PressionAirBruleurMmCE__c</fullName>
    <description>Pression Air Brûleur (mm CE)</description>
    <inlineHelpText>Pression Air Brûleur (mm CE)</inlineHelpText>
    <label>1-Press Air Brûleur(mm CE)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>