force-app/main/default/objects/WorkOrder/fields/WO_PressionAirChemineeMmCE100__c.field-meta.xml
<CustomField>
    <fullName>WO_PressionAirChemineeMmCE100__c</fullName>
    <description>Pression Air Cheminée (mm CE) (100%)</description>
    <inlineHelpText>Pression Air Cheminée (mm CE) (100%)</inlineHelpText>
    <label>3-Press Air Chem (mm CE)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>