force-app/main/default/objects/WorkOrder/fields/WO_PressionAirChemineeMmCE50__c.field-meta.xml
<CustomField>
    <fullName>WO_PressionAirChemineeMmCE50__c</fullName>
    <description>Pression Air Cheminée (mm CE) (50%)</description>
    <inlineHelpText>Pression Air Cheminée (mm CE) (50%)</inlineHelpText>
    <label>2-Press Air Chem (mm CE)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>