force-app/main/default/objects/WorkOrder/fields/WO_PressionAirChemineeMmCE__c.field-meta.xml
<CustomField>
    <fullName>WO_PressionAirChemineeMmCE__c</fullName>
    <description>Pression Air Cheminée (mm CE)</description>
    <inlineHelpText>Pression Air Cheminée (mm CE)</inlineHelpText>
    <label>1-Press Air Chem (mm CE)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>