force-app/main/default/objects/WorkOrder/fields/WO_PressionFioulBar100__c.field-meta.xml
<CustomField>
    <fullName>WO_PressionFioulBar100__c</fullName>
    <description>Pression fioul (bar) (100%)</description>
    <inlineHelpText>Pression fioul (bar) (100%)</inlineHelpText>
    <label>3-Pression fioul (bar)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>