force-app/main/default/objects/WorkOrder/fields/WO_PressionFioulBar50__c.field-meta.xml
<CustomField>
    <fullName>WO_PressionFioulBar50__c</fullName>
    <description>Pression fioul (bar) (50%)</description>
    <inlineHelpText>Pression fioul (bar) (50%)</inlineHelpText>
    <label>2-Pression fioul (bar)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>