force-app/main/default/objects/WorkOrder/fields/WO_PressionFioulBar__c.field-meta.xml
<CustomField>
    <fullName>WO_PressionFioulBar__c</fullName>
    <description>Pression fioul (bar)</description>
    <inlineHelpText>Pression fioul (bar)</inlineHelpText>
    <label>1-Pression fioul (bar)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>