force-app/main/default/objects/WorkOrder/fields/WO_PressionGazBruleurMbar100__c.field-meta.xml
<CustomField>
    <fullName>WO_PressionGazBruleurMbar100__c</fullName>
    <description>Pression Gaz Brûleur (mbar) (100%)</description>
    <inlineHelpText>Pression Gaz Brûleur (mbar) (100%)</inlineHelpText>
    <label>3-Press Gaz Brûleur (mbar)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>