force-app/main/default/objects/WorkOrder/fields/WO_PressionGazBruleurMbar50__c.field-meta.xml
<CustomField>
    <fullName>WO_PressionGazBruleurMbar50__c</fullName>
    <description>Pression Gaz Brûleur (mbar) (50%)</description>
    <label>2-Press Gaz Brûleur (mbar)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>