force-app/main/default/objects/WorkOrder/fields/WO_PressionGazBruleurMbar__c.field-meta.xml
<CustomField>
    <fullName>WO_PressionGazBruleurMbar__c</fullName>
    <description>Pression Gaz Brûleur (mbar)</description>
    <inlineHelpText>Pression Gaz Brûleur (mbar)</inlineHelpText>
    <label>1-Press Gaz Brûleur (mbar)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>