force-app/main/default/objects/WorkOrder/fields/WO_Produit1Type__c.field-meta.xml
<CustomField>
    <fullName>WO_Produit1Type__c</fullName>
    <label>Produit 1 type</label>
    <type>TextArea</type>
</CustomField>