force-app/main/default/objects/WorkOrder/fields/WO_Produit2Type__c.field-meta.xml
<CustomField>
    <fullName>WO_Produit2Type__c</fullName>
    <label>Produit 2 type</label>
    <type>TextArea</type>
</CustomField>