force-app/main/default/objects/WorkOrder/fields/WO_Produit__c.field-meta.xml
<CustomField>
    <fullName>WO_Produit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Produit lié à l&apos;intervention.</description>
    <inlineHelpText>Produit lié à l&apos;intervention.</inlineHelpText>
    <label>Produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Interventions</relationshipLabel>
    <relationshipName>Interventions</relationshipName>
    <type>Lookup</type>
</CustomField>