force-app/main/default/objects/WorkOrder/fields/WO_Puissance__c.field-meta.xml
<CustomField>
    <fullName>WO_Puissance__c</fullName>
    <description>Puissance / débit de l&apos;équipement.</description>
    <inlineHelpText>Puissance / débit de l&apos;équipement.</inlineHelpText>
    <label>Puissance</label>
    <length>50</length>
    <type>Text</type>
</CustomField>