force-app/main/default/objects/WorkOrder/fields/WO_PurgeContinue__c.field-meta.xml
<CustomField>
    <fullName>WO_PurgeContinue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purge continue</label>
    <type>Checkbox</type>
</CustomField>