force-app/main/default/objects/WorkOrder/fields/WO_PurgeIndicateursDeNiveau__c.field-meta.xml
<CustomField>
    <fullName>WO_PurgeIndicateursDeNiveau__c</fullName>
    <description>Purge du/des indicateur(s) de niveau</description>
    <inlineHelpText>Purge du/des indicateur(s) de niveau</inlineHelpText>
    <label>Purge(s) niveau(x)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>