force-app/main/default/objects/WorkOrder/fields/WO_RapportDeConcentrationRC__c.field-meta.xml
<CustomField>
    <fullName>WO_RapportDeConcentrationRC__c</fullName>
    <label>Rapp. de concentration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>