force-app/main/default/objects/WorkOrder/fields/WO_RecommandationsdExploitationTE__c.field-meta.xml
<CustomField>
    <fullName>WO_RecommandationsdExploitationTE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Commentaires et recommandations d’exploitation du prétraitement et du traitement des eaux</description>
    <inlineHelpText>Commentaires et recommandations d’exploitation du prétraitement et du traitement des eaux</inlineHelpText>
    <label>Com. Recommandations d&apos;exploitation TE</label>
    <type>Checkbox</type>
</CustomField>