force-app/main/default/objects/WorkOrder/fields/WO_ReferenceClientDeLEquipement__c.field-meta.xml
<CustomField>
    <fullName>WO_ReferenceClientDeLEquipement__c</fullName>
    <formula>Asset.ASS_ReferenceClient__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Réf client de l’équipement</label>
    <type>Text</type>
</CustomField>