force-app/main/default/objects/WorkOrder/fields/WO_ReglagePompeDoseuse1__c.field-meta.xml
<CustomField>
    <fullName>WO_ReglagePompeDoseuse1__c</fullName>
    <description>Réglage pompe doseuse 1</description>
    <inlineHelpText>Réglage pompe doseuse 1</inlineHelpText>
    <label>Réglage pompe doseuse 1</label>
    <type>TextArea</type>
</CustomField>