force-app/main/default/objects/WorkOrder/fields/WO_ReglagePompeDoseuse2__c.field-meta.xml
<CustomField>
    <fullName>WO_ReglagePompeDoseuse2__c</fullName>
    <label>Réglage pompe doseuse 2</label>
    <type>TextArea</type>
</CustomField>