force-app/main/default/objects/WorkOrder/fields/WO_ReglageRelaisEtConnectiques__c.field-meta.xml
<CustomField>
    <fullName>WO_ReglageRelaisEtConnectiques__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Vérification et réglage des relais et connectiques</description>
    <inlineHelpText>Vérification et réglage des relais et connectiques</inlineHelpText>
    <label>Réglage relais et connectiques</label>
    <type>Checkbox</type>
</CustomField>