force-app/main/default/objects/WorkOrder/fields/WO_RegulationChaudiere__c.field-meta.xml
<CustomField>
    <fullName>WO_RegulationChaudiere__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Régulation chaudière</description>
    <inlineHelpText>Régulation chaudière</inlineHelpText>
    <label>Régulation chaudière</label>
    <type>Checkbox</type>
</CustomField>