force-app/main/default/objects/WorkOrder/fields/WO_ReleveDesParametresDeLaChaufferie__c.field-meta.xml
<CustomField>
    <fullName>WO_ReleveDesParametresDeLaChaufferie__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Relevé des paramètres de fonctionnement de la chaufferie (température, compteurs …)</description>
    <inlineHelpText>Relevé des paramètres de fonctionnement de la chaufferie (température, compteurs …)</inlineHelpText>
    <label>Relevé des paramètres de la chaufferie</label>
    <type>Checkbox</type>
</CustomField>