force-app/main/default/objects/WorkOrder/fields/WO_RemarquesEtConsignes__c.field-meta.xml
<CustomField>
    <fullName>WO_RemarquesEtConsignes__c</fullName>
    <label>Remarques et consignes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>