force-app/main/default/objects/WorkOrder/fields/WO_RemiseEnService__c.field-meta.xml
<CustomField>
    <fullName>WO_RemiseEnService__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remise en service</label>
    <type>Checkbox</type>
</CustomField>