force-app/main/default/objects/WorkOrder/fields/WO_RemiseEnServiceDeconseillee__c.field-meta.xml
<CustomField>
    <fullName>WO_RemiseEnServiceDeconseillee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Remise en service déconseillée et relève, le cas échéant, de la responsabilité de l&apos;exploitant</description>
    <inlineHelpText>Remise en service déconseillée et relève, le cas échéant, de la responsabilité de l&apos;exploitant</inlineHelpText>
    <label>Remise en service déconseillée</label>
    <type>Checkbox</type>
</CustomField>