force-app/main/default/objects/WorkOrder/fields/WO_RemiseEnServiceEtReglageGeneral__c.field-meta.xml
<CustomField>
    <fullName>WO_RemiseEnServiceEtReglageGeneral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Remise en service, réglage général</description>
    <inlineHelpText>Remise en service, réglage général</inlineHelpText>
    <label>Remise en service, réglage général</label>
    <type>Checkbox</type>
</CustomField>