force-app/main/default/objects/WorkOrder/fields/WO_RemontageDuBruleur__c.field-meta.xml
<CustomField>
    <fullName>WO_RemontageDuBruleur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remontage du brûleur</label>
    <type>Checkbox</type>
</CustomField>