force-app/main/default/objects/WorkOrder/fields/WO_RemontageEtVerificationBruleurs__c.field-meta.xml
<CustomField>
    <fullName>WO_RemontageEtVerificationBruleurs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Remontage et vérification brûleurs</description>
    <inlineHelpText>Remontage et vérification brûleurs</inlineHelpText>
    <label>Remontage et vérification brûleurs</label>
    <type>Checkbox</type>
</CustomField>