force-app/main/default/objects/WorkOrder/fields/WO_RemplacementDesFiltresNonCompris__c.field-meta.xml
<CustomField>
    <fullName>WO_RemplacementDesFiltresNonCompris__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Remplacement des filtres (non compris)</description>
    <inlineHelpText>Remplacement des filtres (non compris)</inlineHelpText>
    <label>Remplacement des filtres ( non compris)</label>
    <type>Checkbox</type>
</CustomField>