force-app/main/default/objects/WorkOrder/fields/WO_ReparationProvisoire__c.field-meta.xml
<CustomField>
    <fullName>WO_ReparationProvisoire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Réparation provisoire et travaux complémentaires nécessaires</description>
    <inlineHelpText>Réparation provisoire et travaux complémentaires nécessaires</inlineHelpText>
    <label>Réparation provisoire</label>
    <type>Checkbox</type>
</CustomField>