force-app/main/default/objects/WorkOrder/fields/WO_ReserveDexploitationDuMateriel__c.field-meta.xml
<CustomField>
    <fullName>WO_ReserveDexploitationDuMateriel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Le matériel peut être exploité sous réserves des remarques et consignes ci-après.</description>
    <inlineHelpText>Le matériel peut être exploité sous réserves des remarques et consignes ci-après.</inlineHelpText>
    <label>Réserve d&apos;exploitation du matériel</label>
    <type>Checkbox</type>
</CustomField>