force-app/main/default/objects/WorkOrder/fields/WO_ReservesEventuelles__c.field-meta.xml
<CustomField>
    <fullName>WO_ReservesEventuelles__c</fullName>
    <label>Réserves éventuelles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>