force-app/main/default/objects/WorkOrder/fields/WO_Risque_d_entratrage__c.field-meta.xml
<CustomField>
    <fullName>WO_Risque_d_entratrage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risque entratrage</label>
    <type>Checkbox</type>
</CustomField>