force-app/main/default/objects/WorkOrder/fields/WO_Risque_de_corrosion__c.field-meta.xml
<CustomField>
    <fullName>WO_Risque_de_corrosion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risque de corrosion</label>
    <type>Checkbox</type>
</CustomField>