force-app/main/default/objects/WorkOrder/fields/WO_Risque_de_primage_et_de_boues__c.field-meta.xml
<CustomField>
    <fullName>WO_Risque_de_primage_et_de_boues__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risque primage et boues</label>
    <type>Checkbox</type>
</CustomField>