force-app/main/default/objects/WorkOrder/fields/WO_Risque_de_surconsommation_de_gaz__c.field-meta.xml
<CustomField>
    <fullName>WO_Risque_de_surconsommation_de_gaz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risque surconsommation de gaz</label>
    <type>Checkbox</type>
</CustomField>