force-app/main/default/objects/WorkOrder/fields/WO_Section_Allure_100__c.field-meta.xml
<CustomField>
    <fullName>WO_Section_Allure_100__c</fullName>
    <label>3-GRANDE ALLURE 100% DE CHARGE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>