force-app/main/default/objects/WorkOrder/fields/WO_Section_Allure_50__c.field-meta.xml
<CustomField>
    <fullName>WO_Section_Allure_50__c</fullName>
    <label>2-ALLURE 50% DE CHARGE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>