force-app/main/default/objects/WorkOrder/fields/WO_Section_Petite_Allure__c.field-meta.xml
<CustomField>
    <fullName>WO_Section_Petite_Allure__c</fullName>
    <label>1-PETITE ALLURE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>