force-app/main/default/objects/WorkOrder/fields/WO_SecuriteMiniGaz__c.field-meta.xml
<CustomField>
    <fullName>WO_SecuriteMiniGaz__c</fullName>
    <label>Mini Gaz</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conforme</fullName>
            </value>
            <value>
                <fullName>Non conforme</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Autre / Voir commentaires</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>