force-app/main/default/objects/WorkOrder/fields/WO_Site_Photos__c.field-meta.xml
<CustomField>
    <fullName>WO_Site_Photos__c</fullName>
    <label>Site Photos</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>