force-app/main/default/objects/WorkOrder/fields/WO_SitePhotoCount__c.field-meta.xml
<CustomField>
    <fullName>WO_SitePhotoCount__c</fullName>
    <label>SitePhotoCount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>