force-app/main/default/objects/WorkOrder/fields/WO_SitePhotosTemp__c.field-meta.xml
<CustomField>
    <fullName>WO_SitePhotosTemp__c</fullName>
    <label>SitePhotosTemp</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>