force-app/main/default/objects/WorkOrder/fields/WO_Sous_Type_Non_conformit__c.field-meta.xml
<CustomField>
    <fullName>WO_Sous_Type_Non_conformit__c</fullName>
    <label>Sous Type - Non conformité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatisme</fullName>
            </value>
            <value>
                <fullName>Chaudronnerie</fullName>
            </value>
            <value>
                <fullName>Electrique</fullName>
            </value>
            <value>
                <fullName>Electro-Mecanique</fullName>
            </value>
            <value>
                <fullName>Instrumentation</fullName>
            </value>
            <value>
                <fullName>Autres équipements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>