force-app/main/default/objects/WorkOrder/fields/WO_StatutDuCAT__c.field-meta.xml
<CustomField>
    <fullName>WO_StatutDuCAT__c</fullName>
    <formula>CASE(ServiceContract.SC_Statut__c,&quot;Actif&quot;, &quot;Actif&quot;, &quot;Avant projet&quot;, &quot;Avant projet&quot;,&quot;Contrat signé&quot;, &quot;Contrat signé&quot;,&quot;Suspendu&quot;,&quot;Suspendu&quot;,&quot;Résilié&quot;,&quot;Résilié&quot;,&quot;Terminé&quot;,&quot;Terminé&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut du CAT</label>
    <type>Text</type>
</CustomField>