force-app/main/default/objects/WorkOrder/fields/WO_SurveillanceEtatCalorifuges__c.field-meta.xml
<CustomField>
    <fullName>WO_SurveillanceEtatCalorifuges__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Surveillance de l’état général des calorifuges</description>
    <inlineHelpText>Surveillance de l’état général des calorifuges</inlineHelpText>
    <label>Surveillance de l’état des calorifuges</label>
    <type>Checkbox</type>
</CustomField>