force-app/main/default/objects/WorkOrder/fields/WO_TECH_1_PETITE_ALLURE__c.field-meta.xml
<CustomField>
    <fullName>WO_TECH_1_PETITE_ALLURE__c</fullName>
    <label>&lt; 1- PETITE ALLURE &gt;</label>
    <length>20</length>
    <type>Text</type>
</CustomField>