force-app/main/default/objects/WorkOrder/fields/WO_TECH_2_ALLURE_50__c.field-meta.xml
<CustomField>
    <fullName>WO_TECH_2_ALLURE_50__c</fullName>
    <label>&lt; 2- ALLURE 50% DE CHARGE &gt;</label>
    <length>20</length>
    <type>Text</type>
</CustomField>