force-app/main/default/objects/WorkOrder/fields/WO_TECH_3_ALLURE_100__c.field-meta.xml
<CustomField>
    <fullName>WO_TECH_3_ALLURE_100__c</fullName>
    <label>&lt; 3- GRANDE ALLURE 100% DE CHARGE&gt;</label>
    <length>20</length>
    <type>Text</type>
</CustomField>