force-app/main/default/objects/WorkOrder/fields/WO_TECH_ADRESSE__c.field-meta.xml
<CustomField>
    <fullName>WO_TECH_ADRESSE__c</fullName>
    <description>Juste pour le titre</description>
    <label>&lt; ADRESSE &gt;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>