force-app/main/default/objects/WorkOrder/fields/WO_TECH_ANALYSE_EAU__c.field-meta.xml
<CustomField>
    <fullName>WO_TECH_ANALYSE_EAU__c</fullName>
    <label>&lt; ANALYSES D&apos;EAU &gt;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>