force-app/main/default/objects/WorkOrder/fields/WO_TECH_BILAN__c.field-meta.xml
<CustomField>
    <fullName>WO_TECH_BILAN__c</fullName>
    <label>&lt; BILAN &gt;</label>
    <length>20</length>
    <type>Text</type>
</CustomField>