force-app/main/default/objects/WorkOrder/fields/WO_TECH_CASE_NC_CREATED__c.field-meta.xml
<CustomField>
    <fullName>WO_TECH_CASE_NC_CREATED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WO_TECH_CASE_NC_CREATED</label>
    <type>Checkbox</type>
</CustomField>