force-app/main/default/objects/WorkOrder/fields/WO_TECH_CONTRAT__c.field-meta.xml
<CustomField>
    <fullName>WO_TECH_CONTRAT__c</fullName>
    <label>&lt; DONNEES CONTRAT &gt;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>