force-app/main/default/objects/WorkOrder/fields/WO_TECH_CONTROLE_DE_COMBUSTION__c.field-meta.xml
<CustomField>
    <fullName>WO_TECH_CONTROLE_DE_COMBUSTION__c</fullName>
    <label>&lt; CONTROLES DE COMBUSTION &gt;</label>
    <length>50</length>
    <type>Text</type>
</CustomField>