force-app/main/default/objects/WorkOrder/fields/WO_TECH_EAU_TRAITEE__c.field-meta.xml
<CustomField>
    <fullName>WO_TECH_EAU_TRAITEE__c</fullName>
    <label>&lt; EAU TRAITEE &gt;</label>
    <length>20</length>
    <type>Text</type>
</CustomField>