force-app/main/default/objects/WorkOrder/fields/WO_TECH_FIN_DE_SAISIE_SI_EWATER_ECOM__c.field-meta.xml
<CustomField>
    <fullName>WO_TECH_FIN_DE_SAISIE_SI_EWATER_ECOM__c</fullName>
    <label>&lt; FIN DE SAISIE SI EWATER &amp; ECOM &gt;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>