force-app/main/default/objects/WorkOrder/fields/WO_TECH_GAMME_MAINTENANCE__c.field-meta.xml
<CustomField>
    <fullName>WO_TECH_GAMME_MAINTENANCE__c</fullName>
    <label>&lt; GAMME DE MAINTENANCE &gt;</label>
    <length>50</length>
    <type>Text</type>
</CustomField>